--- a/UI/index.html
+++ b/UI/index.html
@@ -37,7 +37,7 @@
 
                     <div id="errorMessage"></div>
 
-                    <form action="">
+                    <form action="" method="POST">
                         <div class="col-12 formGroup">
                             <label for="email" class="formGroup_label">Email</label>
                             <input type="text" class="inputBx" name="email" id="email" placeholder="e.g.johndoe@ógaBánka.com">
@@ -50,7 +50,7 @@
                         <div class="col-12">
                             <input type="checkbox" name="tandc" id="tandc" > <span id="tandc">Click to Agree to ógaBánka Terms and Conditions</span>
                         </div>
-                        <button type="button" class="btn btn-mg-15" id="signup" style="margin-top:50px;">Ok. I'll do it.</button>
+                        <button type="submit" class="btn btn-mg-15" id="signup" style="margin-top:50px;">Ok. I'll do it.</button>
                     </form>
 
                     <p class="misc">Have an account? <a href="user-sign-in.html">click here to sign in</a></h3>
