included post method in form element

--- a/UI/password-reset.html
+++ b/UI/password-reset.html
@@ -40,14 +40,14 @@
 
                     <div id="errorMessage"></div>
 
-                    <form action="">
+                    <form action="" method="POST">
                         <div class="col-12 formGroup">
                             <label for="email" class="formGroup_label">Email</label>
                             <input type="text" class="inputBx" name="email" id="email" placeholder="e.g.johndoe@ógaBánka.com">
                         </div>
 
                         
-                        <button type="button" class="btn btn-mg-15" id="password_reset">RESET MY PASSWORD</button>
+                        <button type="submit" class="btn btn-mg-15" id="password_reset">RESET MY PASSWORD</button>
                     </form>
 
                     <p class="misc">Don't have an account? <a href="index.html">click here to sign up.</a></h3>
