included post method in form element

--- a/UI/user-sign-in.html
+++ b/UI/user-sign-in.html
@@ -50,12 +50,12 @@
                         <div class="col-12">
                             <input type="checkbox" name="loggedIn" id="loggedIn" checked > <span id="tandc">Keep me logged in</span>
                         </div>
-                        <button type="button" class="btn btn-mg-15" id="login" style="margin-top:50px;">Login</button>
+                        <button type="submit" class="btn btn-mg-15" id="login" style="margin-top:50px;">Login</button>
                     </form>
 
                     <p class="misc">Don't have an account? <a href="index.html">click here to sign up.</a></h3>
 
-                    <p id="forgetPassword"><a href="">Forget Password?</a></p>
+                    <p id="forgetPassword"><a href="password-reset.html">Forget Password?</a></p>
 
                 </div>
 
