--- a/UI/admin/admin-deactivate-account.html
+++ b/UI/admin/admin-deactivate-account.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/grid-layout.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../staff/stylesheets/staff-style.css">
+    <script src="javascripts/admin-deactivate-account.js"></script>
 </head>
 <body>
 
     <div class="row">
         <div class="col-12 header">
-            <div id="header_profileName">ógaBanka - Admin.
+            <div id="header_profileName">Banka - Admin.
                 <ul>
                     <li>Logout &rang;</li>
                 </ul>
@@ -56,16 +58,16 @@
                     </div>
                     <div class="formGroup">
                         <label for="account_type" class="formGroup_label">Reason for Deactivation?*</label>
-                        <input type="radio" class="p6" name="deactivate" value="dormant">
+                        <input type="radio" class="p6 deactivate" name="deactivate" value="dormant">
                             <span class="radio_title">Dormant</span>
-                        <input type="radio" class="p6" name="deactivate" value="account closure">
+                        <input type="radio" class="p6 deactivate" name="deactivate" value="account closure">
                             <span class="radio_title">Account Closure</span>
                     </div>
 
                 </div>
 
                 <div class="col-4 p15">
-                    <button type="submit" class="btn" id="suspendAccount">Deactivate Account</button>
+                    <button type="submit" class="btn" id="deactivateAccount">Deactivate Account</button>
                 </div>
             </form>
         </aside>
@@ -76,9 +78,9 @@
                     <td id="notification_overview" colspan="2">Overview</td>
                 </tr>
                 <tr>
-                    <td colspan="2" class="" style="padding:10px; font-size:11px; background:#fff;">
+                    <td colspan="2" class="notification_note">
                         <p><strong>Note:</strong></p>
-                        <p>ogaBanka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
+                        <p>Banka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
                     </td>
                 </tr>
             </table>
