--- a/UI/admin/admin-profile.html
+++ b/UI/admin/admin-profile.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/grid-layout.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../staff/stylesheets/staff-style.css">
 </head>
 <body>
 
     <div class="row">
         <div class="col-12 header">
-            <div id="header_profileName">ógaBanka - Admin.
+            <div id="header_profileName">Banka - Admin.
                 <ul>
                     <li>Logout &rang;</li>
                 </ul>
@@ -47,7 +48,7 @@
                 
                     <div class="col-4">
                         <ul class="row">
-                            <a href="staff-credit-account.html">
+                            <a href="admin-activate-account.html">
                                 <li class="col-5 dashboardModuleName">Activate</li>
                                 <li class="col-7 dashboardModuleValue">an account</li>
                             </a>
@@ -56,7 +57,7 @@
                 
                 <div class="col-4">
                         <ul class="row">
-                            <a href="staff-debit-account.html">
+                            <a href="admin-deactivate-account.html">
                                 <li class="col-7 dashboardModuleName account-module-color">Deactivate </li>
                                 <li class="col-5 dashboardModuleValue">an account</li>
                             </a>
@@ -64,7 +65,7 @@
                     </div>
                 <div class="col-4">
                     <ul class="row" >
-                        <a href="staff-suspend-account.html">
+                        <a href="admin-deactivate-account.html">
                             <li class="col-7 dashboardModuleName account-status-color">Delete </li>
                             <li class="col-5 dashboardModuleValue">an account</li>
                         </a>
@@ -94,7 +95,7 @@
                                     <td class="rowodd center">21st of March, 2019. </td>
                                     <td class="rowodd ">Savings</td>
                                     <td class="rowodd">Lagos</td>   
-                                    <td class="rowodd center"><a href="view-single-user-account.html">View</a></td>   
+                                    <td class="rowodd center"><a href="admin-view-single-user-account.html">View</a></td>   
                                 </tr>
                                 <tr>
                                     <td class="roweven center">2</td>
@@ -176,9 +177,9 @@
                     <td id="notification_overview" colspan="2">Overview</td>
                 </tr>
                 <tr>
-                    <td colspan="2" class="" style="padding:10px; font-size:11px; background:#fff;">
+                    <td colspan="2" class="notification_note">
                         <p><strong>Note:</strong></p>
-                        <p>ogaBanka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
+                        <p>Banka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
                     </td>
                 </tr>
             </table>
