--- a/UI/upload-photo.html
+++ b/UI/upload-photo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Update Odejobi Olushola's OgaBanka Profile</title>
+    <title>Update Odejobi Olushola Banka's Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/grid-layout.css">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
@@ -13,7 +13,7 @@
 
     <div class="row">
         <div class="col-12 header">
-            <div id="header_profileName">ógaBanka
+            <div id="header_profileName">Banka
                 <ul>
                     <li>Notifications(2)</li>
                     <li>Logout &rang;</li>
@@ -81,9 +81,9 @@
                     <td class="notification_value">Current Account</td>
                 </tr>
                 <tr>
-                    <td colspan="2" class="" style="padding:10px; font-size:11px; background:#fff;">
+                    <td colspan="2" class="notification_note">
                         <p><strong>Note:</strong></p>
-                        <p>ogaBanka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
+                        <p>Banka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
                     </td>
                 </tr>
             </table>
