--- a/UI/transaction-history.html
+++ b/UI/transaction-history.html
@@ -13,7 +13,7 @@
 
         <div class="row">
             <div class="col-12 header">
-                <div id="header_profileName">ógaBanka
+                <div id="header_profileName">Banka
                     <ul>
                         <li>Notifications(2)</li>
                         <li>Logout &rang;</li>
@@ -191,9 +191,9 @@
                     <td class="notification_value">Current Account</td>
                 </tr>
                 <tr>
-                    <td colspan="2" class="" style="padding:10px; font-size:11px; background:#fff;">
+                    <td colspan="2" class="notification_note">
                         <p><strong>Note:</strong></p>
-                        <p>ogaBanka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
+                        <p>Banka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
                     </td>
                 </tr>
             </table>
