--- a/UI/index.html
+++ b/UI/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div id="introduction">
             <img src="images/epicmain-logo.png" id="introduction_logo">
-            <h1 id="introduction_heading">ógaBánka</h1>
+            <h1 id="introduction_heading">Banka</h1>
             <p>Together, We Are Stronger !!!</p>
         </div>
         
@@ -23,10 +23,10 @@
                 <div class="asideLeft">
                     <div class="asideLeft_container" >
                         <p>Sign In</p>
-                        <h1>Explore ógaBánka</h1>
+                        <h1>Explore Banka</h1>
                         <button class='btn-explore'><a href="user-sign-in.html">CLICK HERE TO SIGN IN</a></button>
 
-                        <p id='inscribe'> Be the first to explore the ógaBánka application</p>
+                        <p id='inscribe'> Be the first to explore the Banka application</p>
             
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                     <form action="">
                         <div class="col-12 formGroup">
                             <label for="email" class="formGroup_label">Email</label>
-                            <input type="text" class="inputBx" name="email" id="email" placeholder="e.g.johndoe@ógaBánka.com">
+                            <input type="text" class="inputBx" name="email" id="email" placeholder="e.g.johndoe@banka.com">
                         </div>
 
                         <div class="col-12 formGroup">
@@ -48,7 +48,7 @@
                             <input type="password" class="inputBx" name="password" id="password" placeholder="*************">
                         </div>
                         <div class="col-12">
-                            <input type="checkbox" name="tandc" id="tandc" > <span id="tandc">Click to Agree to ógaBánka Terms and Conditions</span>
+                            <input type="checkbox" name="tandc" id="tandc" > <span id="tandc">Click to Agree to Banka Terms and Conditions</span>
                         </div>
                         <button type="button" class="btn btn-mg-15" id="signup" style="margin-top:50px;">Ok. I'll do it.</button>
                     </form>
