--- a/UI/staff/staff-dashboard.html
+++ b/UI/staff/staff-dashboard.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/grid-layout.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/staff-style.css">
 </head>
 <body>
 
     <div class="row">
         <div class="col-12 header">
-            <div id="header_profileName">ógaBanka - Staff.
+            <div id="header_profileName">Banka - Staff.
                 <ul>
                     <li>Logout &rang;</li>
                 </ul>
@@ -150,9 +151,9 @@
                     <td id="notification_overview" colspan="2">Overview</td>
                 </tr>
                 <tr>
-                    <td colspan="2" class="" style="padding:10px; font-size:11px; background:#fff;">
+                    <td colspan="2" class="notification_note">
                         <p><strong>Note:</strong></p>
-                        <p>ogaBanka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
+                        <p>Banka is a light-weight core banking application that powers banking operations like account creation, customer deposit and withdrawals. This app is meant to support a single bank, whereusers can signup and create bank accounts online, but must visit the branch to withdraw or deposit money..</p>
                     </td>
                 </tr>
             </table>
