User sign up page

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <aside class="col-7">
                 <div class="asideLeft">
                     <div class="asideLeft_container" >
-                        <p>Sign In</p>
                         <h1>Explore Banka</h1>
-                        <button class='btn-explore'><a href="user-sign-in.html">CLICK HERE TO SIGN IN</a></button>
+                        <button class='btn-explore'><a href="user-sign-in.html">SIGN IN</a></button>
 
                         <p id='inscribe'> Be the first to explore the Banka application</p>
             
@@ -50,12 +49,11 @@
                         <div class="col-12">
                             <input type="checkbox" name="tandc" id="tandc" > <span id="tandc">Click to Agree to Banka Terms and Conditions</span>
                         </div>
-                        <button type="button" class="btn btn-mg-15" id="signup" style="margin-top:50px;">Ok. I'll do it.</button>
+                        <button type="button" class="btn btn-mg-15" id="signup" style="margin-top:50px;">JOIN</button>
                     </form>
 
                     <p class="misc">Have an account? <a href="user-sign-in.html">click here to sign in</a></h3>
 
-                    <p id="forgetPassword"><a href="password-reset.html">Forget Password?</a></p>
 
                 </div>
             </aside>
