--- a/UI/index.html
+++ b/UI/index.html
@@ -37,7 +37,7 @@
 
                     <div id="errorMessage"></div>
 
-                    <form action="">
+                    <form action="" method="POST">
                         <div class="col-12 formGroup">
                             <label for="email" class="formGroup_label">Email</label>
                             <input type="text" class="inputBx" name="email" id="email" placeholder="e.g.johndoe@banka.com">
