feature(staff-login):staff login endpoint [Delivers #165289727]

--- a/UI/staff/staff-credit-account.html
+++ b/UI/staff/staff-credit-account.html
@@ -32,10 +32,10 @@
 
             <ul class="menu">
                 <li><a href="staff-dashboard.html">Dashboard</a></li>
-                <li><a href="staff-view-user-account.html">View Customer Account</a></li>
+                <li><a href="staff-view-user-account.html">View Account List</a></li>
                 <li><a href="staff-credit-account.html">Credit Account</a></li>
                 <li><a href="staff-debit-account.html">Debit Bank Account</a></li>
-                <li><a href="staff-suspend-account.html">Suspend Customer Account</a></li>
+                <li><a href="staff-suspend-account.html">Delete Customer Account</a></li>
                 <li>Logout</li>
             </ul>
         </aside>
