--- a/UI/staff/staff-dashboard.html
+++ b/UI/staff/staff-dashboard.html
@@ -31,10 +31,10 @@
 
             <ul class="menu">
                 <li><a href="staff-dashboard.html">Dashboard</a></li>
-                <li><a href="staff-view-user-account.html">View Customer Account</a></li>
+                <li><a href="staff-view-user-account.html">View Account List</a></li>
                 <li><a href="staff-credit-account.html">Credit Account</a></li>
                 <li><a href="staff-debit-account.html">Debit Bank Account</a></li>
-                <li><a href="staff-suspend-account.html">Suspend Customer Account</a></li>
+                <li><a href="staff-suspend-account.html">Delete Customer Account</a></li>
                 <li>Logout</li>
             </ul>
 
@@ -46,8 +46,8 @@
                     <div class="col-4">
                         <ul class="row">
                             <a href="staff-credit-account.html">
-                                <li class="col-5 dashboardModuleName">Credit</li>
-                                <li class="col-7 dashboardModuleValue">an account</li>
+                                <li class="col-7 dashboardModuleName">Credit</li>
+                                <li class="col-5 dashboardModuleValue">an account</li>
                             </a>
                         </ul>
                     </div>
@@ -63,7 +63,7 @@
                 <div class="col-4">
                     <ul class="row" >
                         <a href="staff-suspend-account.html">
-                            <li class="col-7 dashboardModuleName account-status-color">Suspend </li>
+                            <li class="col-7 dashboardModuleName account-status-color">Delete </li>
                             <li class="col-5 dashboardModuleValue">an account</li>
                         </a>
                     </ul>
