--- a/UI/staff/staff-suspend-account.html
+++ b/UI/staff/staff-suspend-account.html
@@ -32,16 +32,16 @@
 
             <ul class="menu">
                 <li><a href="staff-dashboard.html">Dashboard</a></li>
-                <li><a href="staff-view-user-account.html">View Customer Account</a></li>
+                <li><a href="staff-view-user-account.html">View Account List</a></li>
                 <li><a href="staff-credit-account.html">Credit Account</a></li>
                 <li><a href="staff-debit-account.html">Debit Bank Account</a></li>
-                <li><a href="staff-suspend-account.html">Suspend Customer Account</a></li>
+                <li><a href="staff-suspend-account.html">Delete Customer Account</a></li>
                 <li>Logout</li>
             </ul>
         </aside>
 
         <aside class="col-7 col-9-tab">
-            <h1 id="page_title">Suspend an Account</h1>
+            <h1 id="page_title">Delete an Account</h1>
             <div id="errorMessage"></div>
             <form method="POST" action="">
                 <div class="col-12 p15">
@@ -54,7 +54,7 @@
                         </select>
                     </div>
                     <div class="formGroup">
-                        <label for="photo" class="formGroup_label">Suspend? *</label>
+                        <label for="photo" class="formGroup_label">Delete? *</label>
                         <input type="checkbox" name="suspend" id="suspend" ><span id="tandc"> By click, you are agree to suspend this user account.</span>
                     </div>
                 </div>
