--- a/UI/staff/staff-view-user-account.html
+++ b/UI/staff/staff-view-user-account.html
@@ -31,16 +31,16 @@
 
             <ul class="menu">
                 <li><a href="staff-dashboard.html">Dashboard</a></li>
-                <li><a href="staff-view-user-account.html">View Customer Account</a></li>
+                <li><a href="staff-view-user-account.html">View Account List</a></li>
                 <li><a href="staff-credit-account.html">Credit Account</a></li>
                 <li><a href="staff-debit-account.html">Debit Bank Account</a></li>
-                <li><a href="staff-suspend-account.html">Suspend Customer Account</a></li>
+                <li><a href="staff-suspend-account.html">Delete Customer Account</a></li>
                 <li>Logout</li>
             </ul>
 
         </aside>
         <aside class="col-7 col-9-tab">
-            <h1 id="page_title">Customer's List</h1>
+            <h1 id="page_title">Bank Account List</h1>
             <div class="row">
                 <div class="col-12">
                     <div>
