--- a/UI/index.html
+++ b/UI/index.html
@@ -44,13 +44,13 @@
                         </div>
 
                         <div class="col-12 formGroup">
-                            <label for="email" class="formGroup_label">Password</label>
+                            <label for="password" class="formGroup_label">Password</label>
                             <input type="password" class="inputBx" name="password" id="password" placeholder="*************">
                         </div>
                         <div class="col-12">
                             <input type="checkbox" name="tandc" id="tandc" > <span id="tandc">Click to Agree to Banka Terms and Conditions</span>
                         </div>
-                        <button type="button" class="btn btn-mg-15" id="signup" style="margin-top:50px;">Ok. I'll do it.</button>
+                        <button type="button" class="btn btn-mg-15 mt50" id="signup">Ok. I'll do it.</button>
                     </form>
 
                     <p class="misc">Have an account? <a href="user-sign-in.html">click here to sign in</a></h3>
