--- a/UI/staff/view-single-user-account.html
+++ b/UI/staff/view-single-user-account.html
@@ -30,13 +30,13 @@
             <h1 class="center">Orimogunje T.O.</h1>
 
             <ul class="menu">
-                <li><a href="staff-dashboard.html">Dashboard</a></li>
-                <li><a href="staff-view-user-account.html">View Account List</a></li>
-                <li><a href="staff-credit-account.html">Credit Account</a></li>
-                <li><a href="staff-debit-account.html">Debit Bank Account</a></li>
-                <li><a href="staff-suspend-account.html">Delete Customer Account</a></li>
-                <li>Logout</li>
-            </ul>
+                    <li><a href="staff-dashboard.html">Dashboard</a></li>
+                    <li><a href="staff-view-user-account.html">View Account List</a></li>
+                    <li><a href="staff-credit-account.html">Perform Transaction</a></li>
+                    <!-- <li><a href="staff-debit-account.html">Debit Bank Account</a></li>
+                    <li><a href="staff-suspend-account.html">Delete Customer Account</a></li>
+                    <li>Logout</li> -->
+                </ul>
 
         </aside>
         <aside class="col-7">
@@ -45,7 +45,7 @@
                 
                 <div class="col-4">
                     <ul class="row">
-                        <li class="col-5 dashboardModuleName account-cashier-module-color">Name </li>
+                        <li class="col-5 dashboardModuleName">Name </li>
                         <li class="col-7 dashboardModuleValue">Odejobi O.</li>
                     </ul>
                 </div>
@@ -57,13 +57,13 @@
                 </div>
                 <div class="col-4">
                     <ul class="row">
-                        <li class="col-4 dashboardModuleName account-cashier-module-color">Balance</li>
+                        <li class="col-4 dashboardModuleName">Balance</li>
                         <li class="col-8 dashboardModuleValue">&#x20A6;120,000.00</li>
                     </ul>
                 </div>
                 <div class="col-4">
                     <ul class="row">
-                        <li class="col-5 dashboardModuleName account-module-color">Account </li>
+                        <li class="col-5 dashboardModuleName">Account </li>
                         <li class="col-7 dashboardModuleValue">Current</li>
                     </ul>
                 </div>
