--- a/UI/admin/admin-generate-account-number.html
+++ b/UI/admin/admin-generate-account-number.html
@@ -28,22 +28,18 @@
             <div id="menucontainer_img">
                 <img src="../images/image-placeholder.jpg" class="img">
             </div>
+            <p class="center" style="font-size:12px; color:red; padding-top:10px;"><a href="../upload-photo.html" style="color:red">Upload Photo</a></p>
             <h1 class="center">Akerele H.B.</h1>
 
             <ul class="menu">
                 <li><a href="admin-profile.html">Dashboard</a></li>
                 <li><a href="admin-generate-account-number.html">Generate Account No.</a></li>
                 <li><a href="admin-view-clients-account.html">View Customers Account</a></li>
-                <li><a href="admin-activate-account.html">Activate Account</a></li>
-                <li><a href="admin-deactivate-account.html">Deactivate Account</a></li>
-                <li><a href="admin-create-account-category.html">Create Account Category</a></li>
-                <li><a href="admin-create-administrative-category.html">Create Administrative Category</a></li>
                 <li><a href="admin-create-administrative-account.html">Create an Administrative Account</a></li>
-                <li>Logout</li>
             </ul>
 
-        </aside>
-        <aside class="col-7 col-9-tab">
+            </aside>
+            <aside class="col-7 col-9-tab">
             <h1 id="page_title">Generate Account No.</h1>
             <div id="errorMessage"></div>
             <form method="POST" action="">
