--- a/UI/upload-photo.html
+++ b/UI/upload-photo.html
@@ -28,17 +28,16 @@
             <div id="menucontainer_img">
                 <img src="images/image-placeholder.jpg" class="img">
             </div>
+            <p class="center" style="font-size:12px; color:red; padding-top:10px;"><a href="upload-photo.html" style="color:red">Upload Photo</a></p>
             <h1 class="center">Olushola Odejobi</h1>
 
             <ul class="menu">
                 <li><a href="user-profile.html">Dashboard</a></li>
                 <li><a href="update-profile.html">Update Profile</a></li>
-                <li><a href="upload-photo.html">Upload Profile photo</a></li>
                 <li><a href="change-password.html">Change Password </a></li>
                 <li><a href="create-bank-account.html">Create Bank Account</a></li>
-                <li><a href="transaction-history.html">Transaction History</a></li>
-                <li>Logout</li>
             </ul>
+
         </aside>
 
         <aside class="col-7 col-9-tab">
