feature(ui-design-feedback)

--- a/user-sign-in.html
+++ b/user-sign-in.html
@@ -22,10 +22,11 @@
             <aside class="col-7">
                 <div class="asideLeft__loginPageBanner">
                     <div class="asideLeft_container" >
+                        <p>Sign Up</p>
                         <h1>We'll take you to the edge.</h1>
-                        <button class='btn-explore'><a href="#">CREATE A BANK ACCOUNT</a></button>
+                        <button class='btn-explore'><a href="#">CREATE AN ACCOUNT</a></button>
 
-                        <!-- <p id='inscribe'>By creating an account, you agree to Banka Terms</p> -->
+                        <p id='inscribe'>By creating an account, you agree to Banka Terms</p>
             
                     </div>
                 </div>
@@ -54,7 +55,7 @@
 
                     <p class="misc">Don't have an account? <a href="index.html">click here to sign up.</a></h3>
 
-                    <p id="forgetPassword"><a href="password-reset.html">Forget Password?</a></p>
+                    <p id="forgetPassword"><a href="">Forget Password?</a></p>
 
                 </div>
 
