--- a/admin/admin-create-administrative-account.html
+++ b/admin/admin-create-administrative-account.html
@@ -28,19 +28,16 @@
             <div id="menucontainer_img">
                 <img src="../images/image-placeholder.jpg" class="img">
             </div>
+            <p class="center" style="font-size:12px; color:red; padding-top:10px;"><a href="../upload-photo.html" style="color:red">Upload Photo</a></p>
             <h1 class="center">Akerele H.B.</h1>
 
             <ul class="menu">
                 <li><a href="admin-profile.html">Dashboard</a></li>
                 <li><a href="admin-generate-account-number.html">Generate Account No.</a></li>
                 <li><a href="admin-view-clients-account.html">View Customers Account</a></li>
-                <li><a href="admin-activate-account.html">Activate Account</a></li>
-                <li><a href="admin-deactivate-account.html">Deactivate Account</a></li>
-                <li><a href="admin-create-account-category.html">Create Account Category</a></li>
-                <li><a href="admin-create-administrative-category.html">Create Administrative Category</a></li>
                 <li><a href="admin-create-administrative-account.html">Create an Administrative Account</a></li>
-                <li>Logout</li>
             </ul>
+
         </aside>
 
         <aside class="col-7 col-9-tab">
@@ -53,7 +50,7 @@
                     <div class="formGroup">
                         <label for="gender" class="formGroup_label">Administrative Category*</label>
                         <select style="padding-bottom:-10px;" class="inputBx" id="admin_category_id" name="admin_category_id">
-                            <option value="0">Select Gender</option>
+                            <option value="0">Choose Category</option>
                             <option>Staff</option>
                             <option>Admin</option>
                         </select>
@@ -89,7 +86,7 @@
                 <div class="col-6 p15">
                     <div class="formGroup">
                         <label for="phone_no" class="formGroup_label">Phone No</label>
-                        <input class="inputBx" placeholder="+234802244****" id="phone_no" name="phone_no">
+                        <input type="number" class="inputBx" placeholder="+234802244****" id="phone_no" name="phone_no">
                     </div>
                 </div>
                 
