--- a/change-password.html
+++ b/change-password.html
@@ -28,38 +28,37 @@
             <div id="menucontainer_img">
                 <img src="images/image-placeholder.jpg" class="img">
             </div>
+            <p class="center" style="font-size:12px; color:red; padding-top:10px;"><a href="upload-photo.html" style="color:red">Upload Photo</a></p>
             <h1 class="center">Olushola Odejobi</h1>
 
             <ul class="menu">
                 <li><a href="user-profile.html">Dashboard</a></li>
                 <li><a href="update-profile.html">Update Profile</a></li>
-                <li><a href="upload-photo.html">Upload Profile photo</a></li>
                 <li><a href="change-password.html">Change Password </a></li>
                 <li><a href="create-bank-account.html">Create Bank Account</a></li>
-                <li><a href="transaction-history.html">Transaction History</a></li>
-                <li>Logout</li>
             </ul>
 
         </aside>
+
         <aside class="col-7 col-9-tab">
             <h1 id="page_title">Change Password</h1>
             <div id="errorMessage"></div>
             <form method="POST" action="">
-                <div class="col-12 p15">
+                <div class="col-4 p15">
                     <div class="formGroup">
                         <label for="old_password" class="formGroup_label">Old Password*</label>
                         <input type="password" class="inputBx" placeholder="********" id="old_password" name="old_password">
                     </div>
                 </div>
 
-                <div class="col-6 p15">
+                <div class="col-4 p15">
                     <div class="formGroup">
                         <label for="new_password" class="formGroup_label">New Password*</label>
                         <input type="password" class="inputBx" placeholder="***********" id="new_password" name="new_password">
                     </div>
                 </div>
 
-                <div class="col-6 p15">
+                <div class="col-4 p15">
                     <div class="formGroup">
                         <label for="confirm_new_password" class="formGroup_label">Confirm New Password*</label>
                         <input type="password" class="inputBx" placeholder="***********" id="confirm_new_password" name="confirm_new_password">
