--- a/create-bank-account.html
+++ b/create-bank-account.html
@@ -28,14 +28,14 @@
             <div id="menucontainer_img">
                 <img src="images/image-placeholder.jpg" class="img">
             </div>
-            <p class="center" style="font-size:12px; color:red; padding-top:10px;"><a href="upload-photo.html" style="color:red">Upload Photo</a></p>
+            <p class="center misc_two"><a href="upload-photo.html" class="uploadPhoto">Upload Photo</a></p>
             <h1 class="center">Olushola Odejobi</h1>
 
             <ul class="menu">
                 <li><a href="user-profile.html">Dashboard</a></li>
                 <li><a href="update-profile.html">Update Profile</a></li>
-                <li><a href="change-password.html">Change Password </a></li>
                 <li><a href="create-bank-account.html">Create Bank Account</a></li>
+                <li><a href="change-password.html">Change Password </a></li>
             </ul>
 
         </aside>
@@ -57,27 +57,25 @@
                         <input class="inputBx nb" disabled placeholder="Smith" id="last_name" name="last_name">
                     </div>
                 </div>
-
-                <div class="col-6 p15">
-                    <div class="formGroup">
-                        <label for="phone_no"  class="formGroup_label">Phone No</label>
-                        <input class="inputBx nb" disabled placeholder="+234802244****" id="phone_no" name="phone_no">
-                    </div>
-                </div>
-
-                <div class="col-6 p15">
-                    <div class="formGroup">
-                        <label for="email" class="formGroup_label">Email</label>
-                        <input class="inputBx" placeholder="johndoe@ogabanka.com" id="email" name="email">
-                    </div>
-                </div>
-
                 <div class="col-6 p15">
                     <div class="formGroup">
                         <label for="phone_no"  class="formGroup_label">Gender</label>
                         <input class="inputBx nb" disabled placeholder="female" id="gender" name="gender">
                     </div>
                 </div>
+                <div class="col-6 p15">
+                    <div class="formGroup">
+                        <label for="email" class="formGroup_label">Email</label>
+                        <input class="inputBx" placeholder="johndoe@ogabanka.com" id="email" name="email">
+                    </div>
+                </div>
+                <div class="col-6 p15">
+                    <div class="formGroup">
+                        <label for="phone_no"  class="formGroup_label">Phone No</label>
+                        <input class="inputBx" type="number" placeholder="+234802244****" id="phone_no" name="phone_no">
+                    </div>
+                </div>
+
                 <form method="POST" action="">
                     <div class="col-6 p15">
                         <div class="formGroup">
