--- a/user-profile.html
+++ b/user-profile.html
@@ -27,14 +27,14 @@
             <div id="menucontainer_img">
                 <img src="images/image-placeholder.jpg" class="img">
             </div>
-            <p class="center" style="font-size:12px; color:red; padding-top:10px;"><a href="upload-photo.html" style="color:red">Upload Photo</a></p>
+            <p class="center misc_two"><a href="upload-photo.html" class="uploadPhoto">Upload Photo</a></p>
             <h1 class="center">Olushola Odejobi</h1>
 
             <ul class="menu">
                 <li><a href="user-profile.html">Dashboard</a></li>
                 <li><a href="update-profile.html">Update Profile</a></li>
-                <li><a href="change-password.html">Change Password </a></li>
                 <li><a href="create-bank-account.html">Create Bank Account</a></li>
+                <li><a href="change-password.html">Change Password </a></li>
             </ul>
 
         </aside>
@@ -55,7 +55,7 @@
                     </div>
                 <div class="col-4">
                     <ul class="row" >
-                        <li class="col-7 dashboardModuleName account-status-color">Status </li>
+                        <li class="col-7 dashboardModuleName">Status </li>
                         <li class="col-5 dashboardModuleValue">Active</li>
                     </ul>
                 </div>
