--- a/admin/admin-generate-account-number.html
+++ b/admin/admin-generate-account-number.html
@@ -28,13 +28,12 @@
             <div id="menucontainer_img">
                 <img src="../images/image-placeholder.jpg" class="img">
             </div>
-            <p class="center" style="font-size:12px; color:red; padding-top:10px;"><a href="../upload-photo.html" style="color:red">Upload Photo</a></p>
             <h1 class="center">Akerele H.B.</h1>
 
             <ul class="menu">
                 <li><a href="admin-profile.html">Dashboard</a></li>
                 <li><a href="admin-generate-account-number.html">Generate Account No.</a></li>
-                <li><a href="admin-view-clients-account.html">View Customers Account</a></li>
+                <!-- <li><a href="admin-view-clients-account.html">View Customers Account</a></li> -->
                 <li><a href="admin-create-administrative-account.html">Create an Administrative Account</a></li>
             </ul>
 
@@ -68,7 +67,7 @@
         <aside class="col-3 col-12-tab notification">
             <table width="100%" border="0">
                 <tr>
-                    <td id="notification_overview" colspan="2">Overview</td>
+                    <td id="notification_overview" colspan="2">Read Me</td>
                 </tr>
                 <tr>
                     <td colspan="2" class="notification_note">
